# claude-audrey

./: .gitignore  CLAUDE.local.md  PRODUCT.md  README.md
.agents/: .skill-lock.json
audrey-chat/: Audrey.Chat.sln  README.md
audrey-chat/src/Audrey.Chat/: App.xaml  App.xaml.cs  Audrey.Chat.csproj  MainWindow.xaml  MainWindow.xaml.cs
audrey-chat/src/Audrey.Chat/Controls/: MarkdownTextBlock.cs
audrey-chat/src/Audrey.Chat/Models/: AgentActivity.cs  ChatMessage.cs  HistorySession.cs
audrey-chat/src/Audrey.Chat/Services/: IpcClient.cs
audrey-hall/: .gitignore  audrey-hall.spec  justfile  main.py  pyproject.toml  requirements.txt  tmp_verify_dual_view.py
audrey-hall/audrey_hall/: chat_bridge.py  chat_process.py  chat_window.py  claude_agent.py  config.py  constants.py  fonts.py  hook_server.py  hook_state.py  music_player.py  pet.py  quick_menu.py  terminal_view.py  tray.py  utils.py  voice.py  window_manager.py
audrey-hall/audrey_hall/settings/: __init__.py  about.py  base.py  music.py  personalization.py  update.py
audrey-hall/audrey_hall/ui/: __init__.py  animations.py  components.py  theme.py  theme_overrides.py
audrey-hall/docs/: AI_HANDOFF.md  CLAUDE_CODE_TERMINAL_STYLE_CHAT_REDESIGN.md  CLAUDE_INTEGRATION.md  MENU_BACKGROUND_EMBEDDING.md  TK_CHAT_CLAUDE_CODE_REWRITE_PLAN.md  claude-hooks.json
docs/: 08-claude-code-terminal-rendering.md
src/entrypoints/sdk/: coreSchemas.ts
src/tools/AgentTool/: agentToolUtils.ts
src/utils/: sdkEventQueue.ts  sideQuestion.ts
src/utils/filePersistence/: types.ts
src/utils/task/: sdkProgress.ts
